--- a/CSS/CSS.css
+++ b/CSS/CSS.css
@@ -1,6 +1,6 @@
 @charset "utf-8";@import url("../webfonts/DOCALLISME_ON_STREET/stylesheet.css");
 .Titulo {
-	color: #FFFFFF;
+	color: #00FFFF;
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
 	font-size: xx-large;
 	text-align: center;
